policygenerator/policy-sets/community/kyverno/security/input/restrict_usergroup_fsgroup_id/restrict_usergroup_fsgroup_id.yaml
# WARNING: ClusterPolicy was DEPRECATED in Kyverno v1.17
# To update your policy, browse the official Kyverno policy collection
# for current examples: https://kyverno.io/policies

apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: validate-userid-groupid-fsgroup
  annotations:
    policies.kyverno.io/title: Validate User ID, Group ID, and FS Group
    policies.kyverno.io/category: Sample
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
      All processes inside a Pod can be made to run with specific user and groupID by setting `runAsUser` and `runAsGroup` respectively. `fsGroup` can be specified to make sure any file created in the volume will have the specified groupID. This policy validates that these fields are set to the defined values.
spec:
  validationFailureAction: audit
  background: false
  rules:
    - name: validate-userid
      match:
        resources:
          kinds:
            - Pod
      validate:
        message: "User ID should be 1000."
        pattern:
          spec:
            securityContext:
              runAsUser: '1000'
    - name: validate-groupid
      match:
        resources:
          kinds:
            - Pod
      validate:
        message: "Group ID should be 3000."
        pattern:
          spec:
            securityContext:
              runAsGroup: '3000'
    - name: validate-fsgroup
      match:
        resources:
          kinds:
            - Pod
      validate:
        message: "fsgroup should be 2000."
        pattern:
          spec:
            securityContext:
              fsGroup: '2000'
